--- a/word-add-in/src/taskpane/taskpane.html
+++ b/word-add-in/src/taskpane/taskpane.html
@@ -14,7 +14,8 @@
     <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
 
     <!-- For more information on Fluent UI, visit https://developer.microsoft.com/fluentui#/. -->
-    <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/11.0.0/css/fabric.min.css"/>
+    <link rel="stylesheet"
+        href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/11.0.0/css/fabric.min.css" />
 
     <!-- Template styles -->
     <link href="taskpane.css" rel="stylesheet" type="text/css" />
@@ -26,10 +27,15 @@
         <h1 class="ms-font-su">Welcome</h1>
     </header>
     <section id="sideload-msg" class="ms-welcome__main">
-        <h2 class="ms-font-xl">Please <a target="_blank" href="https://learn.microsoft.com/office/dev/add-ins/testing/test-debug-office-add-ins#sideload-an-office-add-in-for-testing">sideload</a> your add-in to see app body.</h2>
+        <h2 class="ms-font-xl">Please <a target="_blank"
+                href="https://learn.microsoft.com/office/dev/add-ins/testing/test-debug-office-add-ins#sideload-an-office-add-in-for-testing">sideload</a>
+            your add-in to see app body.</h2>
     </section>
     <main id="app-body" class="ms-welcome__main" style="display: none;">
-        <button class="ms-Button" id="insert-paragraph">Insert Paragraph</button><br/><br/>  
+        <button class="ms-Button" id="insert-paragraph">Insert Paragraph</button><br /><br />
+        <button class="ms-Button" id="apply-style">Apply Style</button><br /><br />
+        <button class="ms-Button" id="apply-custom-style">Apply Custom Style</button><br /><br />
+        <button class="ms-Button" id="change-font">Change Font</button><br /><br />
     </main>
 </body>
 
