--- a/word-add-in/src/taskpane/taskpane.html
+++ b/word-add-in/src/taskpane/taskpane.html
@@ -36,6 +36,7 @@
         <button class="ms-Button" id="apply-style">Apply Style</button><br /><br />
         <button class="ms-Button" id="apply-custom-style">Apply Custom Style</button><br /><br />
         <button class="ms-Button" id="change-font">Change Font</button><br /><br />
+        <button class="ms-Button" id="insert-image">Insert Image</button><br/><br/>
     </main>
 </body>
 
