--- a/excel-add-in/src/taskpane/taskpane.html
+++ b/excel-add-in/src/taskpane/taskpane.html
@@ -49,6 +49,9 @@
             <span class="ms-Button-label">Run</span>
         </div>
         <p><label id="item-subject"></label></p>
+        <div role="button" id="rand" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
+            <span class="ms-Button-label">random</span>
+        </div>
     </main>
 </body>
 
