--- a/ppt-add-in/src/commands/commands.html
+++ b/ppt-add-in/src/commands/commands.html
@@ -8,6 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 
     <!-- Office JavaScript API -->
+
+    <button id="run"> run </button>
     <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
 </head>
 
