--- a/word-add-in/src/taskpane/taskpane.html
+++ b/word-add-in/src/taskpane/taskpane.html
@@ -40,6 +40,7 @@
         <button class="ms-Button" id="insert-image">Insert Image</button><br/><br/>
         <button class="ms-Button" id="insert-text-outside-range">Add Version Info</button><br/><br/>
         <button class="ms-Button" id="replace-text">Change Quantity Term</button><br/><br/>
+        <button class="ms-Button" id="logo">Show logo</button><br/><br/>
     </main>
 </body>
 
