Test ppt button

--- a/ppt-add-in/src/taskpane/taskpane.html
+++ b/ppt-add-in/src/taskpane/taskpane.html
@@ -49,6 +49,7 @@
             <span class="ms-Button-label">Run</span>
         </div>
         <p><label id="item-subject"></label></p>
+        <button id="test"> Test </button>
     </main>
 </body>
 
