git排除文件、excel 单元格背景文字颜色更改

--- a/excel-add-in/src/taskpane/taskpane.html
+++ b/excel-add-in/src/taskpane/taskpane.html
@@ -52,6 +52,10 @@
         <div role="button" id="rand" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
             <span class="ms-Button-label">random</span>
         </div>
+
+        <div role="button" id="default" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
+            <span class="ms-Button-label">none</span>
+        </div>
     </main>
 </body>
 
