--- a/ppt-add-in/src/taskpane/taskpane.html
+++ b/ppt-add-in/src/taskpane/taskpane.html
@@ -11,7 +11,7 @@
     <title>Contoso Task Pane Add-in</title>
 
     <!-- Office JavaScript API -->
-    <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
+    <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
 
     <!-- For more information on Fluent UI, visit https://developer.microsoft.com/fluentui#/. -->
     <link rel="stylesheet" href="https://res-1.cdn.office.net/files/fabric-cdn-prod_20230815.002/office-ui-fabric-core/11.1.0/css/fabric.min.css"/>
@@ -49,7 +49,9 @@
             <span class="ms-Button-label">Run</span>
         </div>
         <p><label id="item-subject"></label></p>
-        <button id="test"> Test </button>
+        <div role="button" id="test" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
+            <span class="ms-Button-label">Test</span>
+        </div>
     </main>
 </body>
 
