给ppt加载项添加生成一朵花功能

--- a/ppt-add-in/src/taskpane/taskpane.html
+++ b/ppt-add-in/src/taskpane/taskpane.html
@@ -52,6 +52,11 @@
         <div role="button" id="test" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
             <span class="ms-Button-label">Test</span>
         </div>
+
+        <p><label id="item-subject"></label></p>
+        <div role="button" id="flower" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
+            <span class="ms-Button-label">clear a flower</span>
+        </div>
     </main>
 </body>
 
