在excel中玩俄罗斯方块

--- a/excel-add-in/src/taskpane/taskpane.html
+++ b/excel-add-in/src/taskpane/taskpane.html
@@ -53,8 +53,8 @@
             <span class="ms-Button-label">random</span>
         </div>
 .
-        <div role="button" id="default" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
-            <span class="ms-Button-label">none</span>
+        <div role="button" id="play" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
+            <span class="ms-Button-label">Play Tetris</span>
         </div>
     </main>
 </body>
