--- a/excel-add-in/src/taskpane/taskpane.html
+++ b/excel-add-in/src/taskpane/taskpane.html
@@ -52,13 +52,17 @@
         <div role="button" id="rand" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
             <span class="ms-Button-label">random</span>
         </div>
-        <div role="button" id="play" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
+        <div role="button" id="tetris" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
             <span class="ms-Button-label">Play Tetris</span>
         </div>
 
         <div role="button" id="snake" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
             <span class="ms-Button-label">Play Snake</span>
         </div>
+
+        <!-- <div role="button" id="debug" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl" style="background-color: #ff9800;">
+            <span class="ms-Button-label">🐛 Debug Test</span>
+        </div> -->
     </main>
 </body>
 
