word 随机一句诗词输入

--- a/word-add-in/src/taskpane/taskpane.html
+++ b/word-add-in/src/taskpane/taskpane.html
@@ -41,6 +41,7 @@
         <button class="ms-Button" id="insert-text-outside-range">Add Version Info</button><br/><br/>
         <button class="ms-Button" id="replace-text">Change Quantity Term</button><br/><br/>
         <button class="ms-Button" id="logo">Show logo</button><br/><br/>
+        <button class="ms-Button" id="jinrishici">获取一句诗词</button><br/><br/>
     </main>
 </body>
 
